--- a/save-points/00-get-started/BlazingPizza.Client/BlazingPizza.Client.csproj
+++ b/save-points/00-get-started/BlazingPizza.Client/BlazingPizza.Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>$(TargetFrameworkVersion)</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>true</ImplicitUsings>
   </PropertyGroup>
 
